Implementhed Follows/Follower logic and endpoints
